# radius_comps_viz

./: .pdm-python  README.md  app.py  pyproject.toml  requirements.txt  utils.py
csv_data/: F5P Active Markets.csv
csv_data/ape_comps/: 11460.csv  11540.csv  13020.csv  13060.csv  13140.csv  14780.csv  15380.csv  16620.csv  17900.csv  20900.csv  24340.csv  24860.csv  25540.csv  27140.csv  28940.csv  31860.csv  36780.csv  40340.csv  41060.csv  41140.csv  45220.csv
csv_data/ape_comps/v2-market-avg/: 11460.csv  11540.csv  13020.csv  13060.csv  13140.csv  14780.csv  15380.csv  16620.csv  20900.csv  24340.csv  25540.csv  28940.csv  31860.csv  36780.csv  40340.csv  41060.csv  41140.csv  45220.csv
